# RustyDownloader

./: .gitignore  README.md
.github/workflows/: release.yml
extension/: background.js  content.js  inject.js  manifest.json  popup.html  popup.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  download_manager.rs  downloader.rs  extension_server.rs  filename_resolver.rs  hls_downloader.rs  lib.rs  main.rs  tray.rs
