[package]
name = "rusty-downloader"
version = "0.1.0"
description = "A fast download manager built with Tauri"
authors = ["Huy"]
edition = "2021"

[lib]
name = "rusty_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "cookies"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
percent-encoding = "2"
url = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-autostart = "2"
